--- a/deneme.html
+++ b/deneme.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Merhaba Dünya</title>
+    <title>Selam Dünya</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -28,7 +28,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Merhaba Dünya!</h1>
+        <h1>Selam Dünya!</h1>
         <p>Bu basit bir HTML sayfasıdır.</p>
     </div>
 </body>
